Bug 480948 - Crash when changing the view display style
Summary: Crash when changing the view display style
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kconfigwidgets
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-06 13:04 UTC by popov895
Modified: 2024-02-16 14:35 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Crash (30.76 KB, text/plain)
2024-02-06 13:04 UTC, popov895
Details
Yet another crash (25.82 KB, text/plain)
2024-02-06 13:04 UTC, popov895
Details
Crash 3 (27.66 KB, text/plain)
2024-02-06 13:05 UTC, popov895
Details
More crashes (8.55 KB, application/zip)
2024-02-08 18:29 UTC, popov895
Details

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2024-02-06 13:04:11 UTC
Created attachment 165611 [details]
Crash

SUMMARY

Dolphin crashes when changing the view display style.

STEPS TO REPRODUCE

1. Open View Display Style dialog (menu > More > View > Adjust View Display Style)
2. Make some changes (this step is optional)
3. Press OK

SOFTWARE/OS VERSIONS

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 5.249.0
KDE Gear Version: 24.04.70
Qt Version: 6.6.1
Graphics Platform: X11
Comment 1 popov895 2024-02-06 13:04:37 UTC
Created attachment 165612 [details]
Yet another crash
Comment 2 popov895 2024-02-06 13:05:49 UTC
Created attachment 165613 [details]
Crash 3
Comment 3 Doug 2024-02-07 05:59:59 UTC
Cannot reproduce.  I tried changing several different parameters, and then all the parameters, with no crash.  Maybe a regression from 6.0?

Operating System: KDE neon Testing Edition
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.1
Kernel Version: 6.5.0-15-generic (64-bit)
Graphics Platform: Wayland
Graphics Processor: AMD Radeon Pro WX 3200 Series
Comment 4 Akseli Lahtinen 2024-02-08 12:33:01 UTC
I can't reproduce either on Plasma 6. Can you send a screenshot of your Dolphin? I could try to make my Dolphin look similar, maybe there's some specific thing that crashes.

Operating System: Fedora Linux 39
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.0
Kernel Version: 6.7.3-200.fc39.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600
Comment 5 popov895 2024-02-08 18:29:11 UTC
Created attachment 165677 [details]
More crashes

I just found that Dolphin actually crashes only when I open this dialog via the command palette. So, to reproduce this issue:

1. Open command palette (press Ctrl+Alt+I or menu > Help > Find Action...)
2. Look up for the "Adjust View Display Style" and press Enter
3. Press OK in the View Display Style dialog
Comment 6 Doug 2024-02-09 05:07:17 UTC
(In reply to popov895 from comment #5)
> Created attachment 165677 [details]
> More crashes
> 
> I just found that Dolphin actually crashes only when I open this dialog via
> the command palette. So, to reproduce this issue:
> 
> 1. Open command palette (press Ctrl+Alt+I or menu > Help > Find Action...)
> 2. Look up for the "Adjust View Display Style" and press Enter
> 3. Press OK in the View Display Style dialog

I can reproduce with those steps provided there is a 2.1- make a change to the view display style of some sort.
Comment 7 Bug Janitor Service 2024-02-10 12:33:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kconfigwidgets/-/merge_requests/229
Comment 8 Christoph Cullmann 2024-02-16 14:35:17 UTC
Git commit 805baee2231e8e5742f5ee1343bba74caab1796e by Christoph Cullmann, on behalf of Eugene Popov.
Committed on 16/02/2024 at 14:33.
Pushed by cullmann into branch 'master'.

[KCommandBar] Fixed a crash when triggering some actions

Triggering some actions may cause the command bar to lose input focus and be destroyed too early. To avoid this, we should hide the command bar before triggering the action.

M  +5    -9    src/kcommandbar.cpp

https://invent.kde.org/frameworks/kconfigwidgets/-/commit/805baee2231e8e5742f5ee1343bba74caab1796e