[KCommandBar] Fixed a crash when triggering some actions

Triggering some actions may cause the command bar to lose input focus and be destroyed too early. To avoid this, we should hide the command bar before triggering the action.

BUG: 480948